# simple-api-aks

./: .gitignore  Cargo.toml  Dockerfile  README.md  build4docker.sh  build4linux.sh  run.sh
deployments/: deploy.sh  deploy.yaml
src/: main.rs
terraform/: apply.sh  main.tf  outputs.tf  plan.sh  variables.tf
