[package]
name = "simple-api-aks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-musl]
linker = "rust-lld"

[dependencies]
actix-web = "4.5"
log = "0.4"
opentelemetry-application-insights = { version = "0.29" , features = ["reqwest-client-rustls","live-metrics","sysinfo","metrics"] }
pretty_env_logger = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11" , features = ["rustls-tls"] }
opentelemetry_sdk = { version = "0.21" , features = ["trace","logs","metrics","rt-tokio"] }
opentelemetry = { version = "0.21" , features = ["trace","logs","metrics"] }
